<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ugv_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>

  <maintainer email="wes@todo.todo">wes</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- apparently this is how you're supposed to do it: https://nu-msr.github.io/me495_site/lecture10_sdf_gazebo.html -->
    <gazebo_ros gazebo_model_path="${prefix}/models"
                gazebo_plugin_path="${prefix}/velodyne_simulator"
                gazebo_resource_path="${prefix}/meshes" />
  </export>

</package>
